name:                iconv-typed
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/iconv-typed#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codec.Text.IConv.Typed
  build-depends:       base >= 4.7 && < 5,
                       iconv < 0.5,
                       shelly < 1.8.0.0,
                       text < 1.4.0.0,
                       template-haskell < 3.0.0.0
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  if os(darwin)
    other-modules:     Codec.Text.IConv.Typed.MacOSX
  else
    other-modules:     Codec.Text.IConv.Typed.Unix

test-suite iconv-typed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , iconv-typed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/iconv-typed
